# algorithms

./: .clang-format  .gitignore  Dockerfile  Makefile  README.md  bootstrap.sh  build.gyp  configure.py  equilibrium.scala  insertion-sort.c  meson.build  node.c
algo2/: pa4.cpp
hackerrank/: find_the_point.cpp  handshake.cpp  maximum_draws.cpp  meson.build
hackerrank/algorithms/: build.gyp
hackerrank/algorithms/warmup/: time_conversion.cpp
hackerrank/data_structures/: algorithmic_crush.cpp  build.gyp  dynamic_array.cpp  left_rotation.cpp  sparse_arrays.cpp
hackerrank/data_structures/array/: build.gyp
hackerrank/data_structures/linked_list/: Makefile  build.gyp  compare_list.cpp  delete_node.cpp  insert_node_head.cpp  insert_node_position.cpp  insert_node_tail.cpp  node.cpp  node.h  print_element_linked_list.cpp  print_in_reverse.cpp  reverse_list.cpp  tests.cpp
hackerrank/data_structures/tree/: Makefile  build.gyp  meson.build  tests.cc  tests.cpp  tree.cpp  tree.h  tree.hh
hackerrank/include/array/: array.hh
hackerrank/math/: army_game.cpp  build.gyp  math.cpp  math.hpp  meson.build  tests.cc
hackerrank/project_euler/: euler.cc
hackerrank/test/: array.cc
include/: array.hh  list.hh  tree.hh
include/jvanz/: graph.hpp  linked_list.hpp
src/: container.hpp  graph.cpp  linked_list.cpp  list.cc  tree.cc
src/hackerrank/: array_test.cc  list_tests.cc  tree.cc
src/hackerrank/algorithms/warmup/: time_conversion.cpp
src/hackerrank/data_structures/array/: algorithmic_crush.cpp  dynamic_array.cpp  left_rotation.cpp  sparse_arrays.cpp
src/hackerrank/math/: army_game.cc  find_the_point.cc  handshake.cc  lowest_triangle.cc  maximum_draws.cc
tests/: algorithm_design.cpp  dummy.cpp  linked_list.cpp
